--- a/src/components/Combobox/Combobox.css
+++ b/src/components/Combobox/Combobox.css
@@ -36,18 +36,27 @@
   margin-top: var(--combobox-list-gap);
   padding: 0;
   width: calc(var(--combobox-max-width) - 4px);
-  /* width: min(100%, 320px); */
   max-height: var(--combobox-list-height);
   border: var(--border-default);
   background: white;
   overflow-y: auto;
   visibility: hidden;
   border-radius: var(--radius-1);
-  box-shadow: 0 0 #000, 0 1px 2px 0 rgba(0, 0, 0, 0.05),
-    0 1px 2px 0 rgba(0, 0, 0, 0.05);
+  box-shadow: rgba(0, 0, 0, 0.1) 0px 10px 15px -3px,
+    rgba(0, 0, 0, 0.05) 0px 4px 6px -2px;
 
+  &.expanded {
+    visibility: visible;
+  }
+
+  & + *,
+  .listbox-label + * {
+    margin-top: 1em;
+  }
+
+  /* Scrollbar */
   &::-webkit-scrollbar {
-    width: 9px;
+    width: 8px;
   }
 
   &::-webkit-scrollbar-track {
@@ -57,15 +66,6 @@
   &::-webkit-scrollbar-thumb {
     background-color: var(--color-primary-light);
     border-radius: 2px;
-  }
-
-  &.expanded {
-    visibility: visible;
-  }
-
-  & + *,
-  .listbox-label + * {
-    margin-top: 1em;
   }
 }
 
@@ -79,8 +79,7 @@
   }
 }
 
-/* Refactor styles below */
-
+/* Group styles */
 [role="group"] {
   margin: 0;
   padding: 0;
@@ -100,26 +99,4 @@
   position: relative;
   display: block;
   cursor: pointer;
-}
-
-[role="toolbar"] {
-  display: flex;
-}
-
-[role="toolbar"] > * {
-  border: 1px solid #aaa;
-  background: #ccc;
-}
-
-[role="toolbar"] > [aria-disabled="false"]:focus {
-  background-color: #eee;
-}
-
-.annotate {
-  color: #366ed4;
-  font-style: italic;
-}
-
-.hidden {
-  display: none;
 }
